# kol_editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  kol_editor.c
