CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(kol_editor)

SET(CMAKE_COLOR_MAKEFILE OFF)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}
                    ${gtest_SOURCE_DIR}/include
                    ${PROJECT_SOURCE_DIR}/src)

IF(UNIX)
    SET(CMAKE_C_FLAGS "-Wall -W -Werror -O2 -std=c99")
ENDIF()

ADD_SUBDIRECTORY(src)
